# data-sources

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
config/: notifier_env.sh  order_limits.csv
config/proofs/: cffex_trading_rules.html  czce_trading_parameters.txt  dce_minoq_reference.txt  dce_trading_param.json  gfex_lc_minoq_announcement.html  wss_DCE_minoq_maxoq.json  wss_GFEX_minoq_maxoq.json
data/: trade_dates.txt
deploy/: rutask.json5
deploy/offline/: MANIFEST.md  mxz_utils-0.1.1-py3-none-any.whl
doc/: phase1-deployment.md
docs/: announcement-dev-log.md  announcement-monitoring-plan.md  collect_announcements_service_devlog.md  daily-order-limits-design.md  dceapiv1.0.docx  deepseek-aiohttp-connection-troubleshooting.md  deployment-guide.20260529-9602a79.md  deployment-guide.latest.md  deployment-guide.md  deployment-guide.phase1.bak.md  deployment-log.md  deployment-phase2.md  deployment-plan.md  development-guide.20260618-36b04c8.md  development-log.md  operations-manual.md  phase1-deployment.md  tick-change-validation.md
prompts/: extract_fields.txt
scripts/: announcement_watcher.py  check_announcements.py  daily_report.sh  data-sources-pipeline  data_sources_pipeline  deploy.sh  download_announcements.py  fetch_cffex_jscs_links.py  fields_from_announcements.py  order_limits_report.py  order_limits_updater.py  pipeline.sh  run.sh  test_dce_daily.py  transform_order_limits.py  update_fields_from_announcements.py  update_future_cn_dot_t_futures_info.sh  update_tick_sizes.py  validate_articles.py
src/data_sources/: backfill.py  configs.py  constants.py  db.py  fetcher.py  models.py  modifier.py  parser.py  reporter.py  task.py  trade_date.py  verifier.py  wind_client.py  writer.py
src/data_sources/discover/: cffex.py  (+10 more)
tests/: test_fetcher.py
(+54 files in other folders)
