[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-sources"
version = "0.1.0"
description = "Maxincer's independent data sources"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.31.0",
    "fire~=0.7.0",
    "pymysql~=1.1.0",
    "playwright~=1.58.0",
    "beautifulsoup4~=4.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["data_sources*"]
